--- a/auth/package.json
+++ b/auth/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon --exec tsx src/index.ts",
     "test": "jest --watchAll --no-cache",
     "build": "tsup src/index.ts --format esm --dts",
-    "test:ci": "tsc --noEmit && jest"
+    "test:ci": "tsc --noEmit && jest --no-cache"
   },
   "jest": {
     "preset": "ts-jest",
